[package]
name = "a3mo_lib"
version = "0.1.10"
authors = ["Scarjit <scarjit@aol.com>"]
edition = "2018"
description = "Arma3 Mod Organizer libary. Provides functions for CLI Client and GUI"
license = "MIT"

[badges]
appveyor = { repository = "Scarjit/mo-libary", branch = "master", service = "github" }
travis-ci = { repository = "arma3modorganizer/MO-Libary", branch = "master" }
coveralls = { repository = "https://github.com/arma3modorganizer/MO-Libary", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
blake2b_simd = "0.5.5"
rand = "0.7.0"
xorshift = "0.1"
time = "0.1.42"
rustc-test = "0.3.0"
faster-hex = "0.3.1"
custom_error = "1.6.0"
walkdir = "2.2.9"
rayon = "1.1.0"
#petgraph = {version="0.4.13", features = ["serde-1"]}
url = "2.0.0"
reqwest = "0.9.19"

serde = { version = "1.0.90",features = ["derive"] }
serde_derive = { version = "1.0.90" }
serde_json = {version = "1.0.40"}
easy_xxhash64 = "1.1.6"
failure = "0.1.5"
delta_patch = {path = "../delta_patch"}


[dependencies.indextree]
version = "4.0.0"
features = ["deser"]

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]



